variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value x
x = 1
^Variables:4: error: not found: value x
  x = x + 1
  ^Variables:7: error: not found: value x
while(x!=1){
      ^